editing system 2 almost finish-prob is edited contents will apply to all contents

--- a/index.html
+++ b/index.html
@@ -3,53 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Golden Crumb | Artisanal Bakery</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <title>WebGen-AI</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              bakery: {
-                dark: '#5D4037', // Dark warm brown
-                primary: '#8B4513', // Saddle Brown (requested)
-                accent: '#D2691E', // Chocolate
-                cream: '#FFF8E7', // Cosmic Latte
-                beige: '#F5F5DC', // Beige
-                sand: '#E6DCC3',
-              }
-            },
-            fontFamily: {
-              serif: ['"Playfair Display"', 'serif'],
-              sans: ['"Lato"', 'sans-serif'],
-            }
-          }
-        }
-      }
-    </script>
-    <style>
-      html {
-        scroll-behavior: smooth;
-      }
-      body {
-        background-color: #FFF8E7;
-        color: #5D4037;
-      }
-    </style>
-  <script type="importmap">
-{
-  "imports": {
-    "framer-motion": "https://aistudiocdn.com/framer-motion@^12.23.24",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/"
-  }
-}
-</script>
 </head>
   <body>
     <div id="root"></div>
